--- a/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
+++ b/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
@@ -1,5 +1,6 @@
 #Config for Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch
 #based off the configs by PaNaRaMuH and Clank50AE
+#This is for reference purposes only
 
 [stepper_x]
 step_pin: P2.2
