--- a/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
+++ b/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
@@ -2,6 +2,9 @@
 #based off the configs by PaNaRaMuH and Clank50AE
 #This is for reference purposes only
 
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_lpc1768_0620011428142AAE8906DE52801E00F5-if00
+
 [stepper_x]
 step_pin: P2.2
 dir_pin: !P2.6
@@ -80,9 +83,6 @@ heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
 
-[mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_0300011564084AAF89EC655DC42000F5-if00 #Make sure to change this to Match your MCU address
-
 [printer]
 kinematics: cartesian
 max_velocity: 250
@@ -92,7 +92,7 @@ max_z_accel: 100
 square_corner_velocity: 5 
 
 [bltouch]
-sensor_pin: P0.10
+sensor_pin: ^P1.25
 control_pin: P2.0
 x_offset: 0
 y_offset: 28
