--- a/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
+++ b/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
@@ -1,9 +1,28 @@
 #Config for Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch
-#based off the configs by PaNaRaMuH and Clank50AE
-#This is for reference purposes only
+#Based off the configs by PaNaRaMuH and Clank50AE
+#Current configuration in use, reference only.~
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_0620011428142AAE8906DE52801E00F5-if00
+
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
+
+#[adxl345]
+#cs_pin: rpi:None
+
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+#    100,100,20  # an example
+
+[input_shaper]
+#shaper_type: 2hump_ei
+shaper_type_x: 2hump_ei
+shaper_freq_x: 72.8
+shaper_type_y: ei
+shaper_freq_y: 43.0
+
 
 [stepper_x]
 step_pin: P2.2
@@ -22,10 +41,11 @@ dir_pin: !P0.20
 enable_pin: !P2.8
 microsteps: 16
 rotation_distance: 40
-endstop_pin: !P1.28
+endstop_pin: !P1.27
 position_endstop: 0
 position_max: 300
-homing_speed: 100
+homing_speed: 60
+homing_retract_dist: 10.0
 
 [stepper_z]
 step_pin: P0.22
@@ -34,7 +54,7 @@ enable_pin: !P0.21
 microsteps: 16
 rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
-position_min = -3.5
+position_min = -5
 position_max: 380
 
 [stepper_z1]
@@ -46,7 +66,7 @@ rotation_distance: 8
 
 [extruder]
 step_pin: P2.13
-dir_pin: !P0.11
+dir_pin: P0.11
 enable_pin: !P2.12
 microsteps: 16
 rotation_distance: 9.467
@@ -54,14 +74,16 @@ nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
 sensor_type: NTC 100K beta 3950
-sensor_pin: P0.24
-control: pid
-pid_Kp: 14.74
-pid_Ki: 0.76
-pid_Kd: 71.82
+sensor_pin: P0.23
+control = pid
+pid_kp = 16.013
+pid_ki = 0.470
+pid_kd = 136.314
 max_extrude_only_distance: 100
-min_temp: 175
+min_temp: 0
 max_temp: 295
+#pla, set as default
+pressure_advance = 0.041
 
 [heater_bed]
 heater_pin: P2.5
@@ -86,17 +108,17 @@ fan_speed: 1.0
 [printer]
 kinematics: cartesian
 max_velocity: 250
-max_accel: 3000
+max_accel: 3400
 max_z_velocity: 20
 max_z_accel: 100
 square_corner_velocity: 5 
 
 [bltouch]
-sensor_pin: ^P1.25
+sensor_pin: ^P1.25   # Pull-up (^ symbol) needed in open drain mode
 control_pin: P2.0
 x_offset: 0
 y_offset: 28
-#z_offset: 0
+z_offset: 2.995
 samples:2
 samples_result:average
 probe_with_touch_mode: true
@@ -109,7 +131,7 @@ z_hop: 10  # Move up 10mm
 z_hop_speed: 5
 
 [bed_mesh]
-speed: 800
+speed: 400
 mesh_min: 30,30
 mesh_max: 270,270
 probe_count: 5,5
@@ -125,30 +147,142 @@ fade_end: 5.0
 
 [tmc2209 stepper_x]
 uart_pin: P1.17
-run_current: 0.650
-hold_current: 0.500
-stealthchop_threshold: 250
+interpolate: True
+run_current: 0.850
+hold_current: 0.600
+stealthchop_threshold: 100
 
 [tmc2209 stepper_y]
 uart_pin: P1.15
-run_current: 0.650
-hold_current: 0.500
-stealthchop_threshold: 250
+interpolate: True
+run_current: 0.880
+hold_current: 0.650
+stealthchop_threshold: 100
 
 [tmc2209 stepper_z]
 uart_pin: P1.10
-run_current: 0.650
-hold_current: 0.450
+interpolate: True
+run_current: 0.750
+hold_current: 0.550
 stealthchop_threshold: 250
 
 [tmc2209 stepper_z1]
 uart_pin: P1.1
-run_current: 0.650
-hold_current: 0.450
+interpolate: True
+run_current: 0.750
+hold_current: 0.550
 stealthchop_threshold: 250
 
 [tmc2209 extruder]
 uart_pin: P1.8
-run_current: 0.650
-hold_current: 0.500
+run_current: 0.720
+hold_current: 0.550
 stealthchop_threshold: 10
+
+[virtual_sdcard]
+path: ~/gcode_files
+
+[display_status]
+
+[pause_resume]
+
+[gcode_macro G29]
+gcode:
+ G28
+ BED_MESH_CALIBRATE
+ BED_MESH_PROFILE SAVE=p1
+ G1 X0 Y0 Z5 F4000
+
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_BASE
+# change this if you need more or less extrusion
+variable_extrude: 1.0
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  ##### set park positon for x and y #####
+  # default is your max posion from your printer.cfg
+  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+  ##### calculate save lift position #####
+  {% set max_z = printer.toolhead.axis_maximum.z|float %}
+  {% set act_z = printer.toolhead.position.z|float %}
+  {% if act_z < (max_z - 2.0) %}
+      {% set z_safe = 2.0 %}
+  {% else %}
+      {% set z_safe = max_z - act_z %}
+  {% endif %}
+  ##### end of definitions #####
+  PAUSE_BASE
+  G91
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G1 E-{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    G1 Z{z_safe} F900
+    G90
+    G1 X{x_park} Y{y_park} F6000
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %} 
+
+  [gcode_macro RESUME]
+description: Resume the actual running print
+rename_existing: RESUME_BASE
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  #### get VELOCITY parameter if specified ####
+  {% if 'VELOCITY' in params|upper %}
+    {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
+  {%else %}
+    {% set get_params = "" %}
+  {% endif %}
+  ##### end of definitions #####
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G91
+    G1 E{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}  
+  RESUME_BASE {get_params}
+
+[gcode_macro CANCEL_PRINT]
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+  TURN_OFF_HEATERS
+  CANCEL_PRINT_BASE
+  gcode:
+   M220 S100 ; Reset Speed factor override percentage to default (100%)
+   M221 S100 ; Reset Extrude factor override percentage to default (100%)
+   G91 ; Set coordinates to relative
+   {% if printer.extruder.temperature >= 170 %}
+      G1 F1800 E-1 ; Retract filament 3 mm to prevent oozing
+   {% endif %}
+
+   ;if all axis are homed, lift the hotend to leave room for hot filament to ooze and to keep it clear of the bed.
+   {% if printer.toolhead.homed_axes == "xyz" %}
+      G1 F6000 Z10 ; Move Z Axis up 10 mm to allow filament ooze freely
+      G90 ; Set coordinates to absolute
+      G1 X0 Y221 F1000 ; Move Heat Bed to the front for easy print removal
+      M84 ; Disable stepper motors
+   {% endif %}
+
+   ;set part fan speed to zero.
+   M106 S0
+   ;bed and hotend are left at the print temps in case I want to restart.
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bltouch]
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 16.013
+#*# pid_ki = 0.470
+#*# pid_kd = 136.314
