--- a/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
+++ b/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
@@ -30,7 +30,8 @@ enable_pin: !P2.1
 microsteps: 16
 rotation_distance: 40
 endstop_pin: !P1.29
-position_endstop: 0
+position_endstop: -3
+position_min = -3
 position_max: 300
 homing_speed: 100
 
@@ -41,7 +42,8 @@ enable_pin: !P2.8
 microsteps: 16
 rotation_distance: 40
 endstop_pin: !P1.27
-position_endstop: 0
+position_endstop: -5
+position_min = -5
 position_max: 300
 homing_speed: 60
 homing_retract_dist: 10.0
@@ -75,14 +77,17 @@ heater_pin: P2.7
 sensor_type: NTC 100K beta 3950
 sensor_pin: P0.23
 control = pid
-pid_kp = 16.013
-pid_ki = 0.470
-pid_kd = 136.314
+pid_kp = 13.906
+pid_ki = 0.408
+pid_kd = 118.377
+
 max_extrude_only_distance: 100
 min_temp: 0
 max_temp: 295
 #pla, set as default
-pressure_advance = 0.041
+pressure_advance = 0.038
+#petg
+#pressure_advance = 0.065
 
 [heater_bed]
 heater_pin: P2.5
@@ -97,6 +102,7 @@ max_temp: 130
 
 [fan]
 pin: P2.3
+off_below: 0.08
 
 [heater_fan my_nozzle_fan]
 pin: P2.4
@@ -117,7 +123,8 @@ sensor_pin: ^P1.25   # Pull-up (^ symbol) needed in open drain mode
 control_pin: P2.0
 x_offset: 0
 y_offset: 28
-z_offset: 2.995
+#z_offset: 3.061
+z_offset: 2.998
 samples:2
 samples_result:average
 probe_with_touch_mode: true
@@ -141,6 +148,30 @@ move_check_distance: 3.0
 split_delta_z: .010
 fade_start: 1.0 
 fade_end: 5.0
+
+[bed_screws]
+screw1: 55,55
+screw1_name: front left
+screw2: 255,55
+screw2_name: front right
+screw3: 255,255
+screw3_name: back right
+screw4: 55,255
+screw4_name: back left
+speed: 100.0
+
+
+[screws_tilt_adjust]
+screw1: 22,83
+screw1_name: front left
+screw2: 222,83
+screw2_name: front right
+screw3: 22,283
+screw3_name: back left
+screw4: 222,283
+screw4_name: back right
+speed: 100.0
+screw_thread: CW-M5
 
 # TMC2209 configuration
 
@@ -276,12 +307,5 @@ gcode:
    ;bed and hotend are left at the print temps in case I want to restart.
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bltouch]
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 16.013
-#*# pid_ki = 0.470
-#*# pid_kd = 136.314
+
+
