added small comment

--- a/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
+++ b/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
@@ -209,6 +209,8 @@ run_current: 0.720
 hold_current: 0.550
 stealthchop_threshold: 10
 
+#everything past here is specific to my fluidd setup 
+
 [virtual_sdcard]
 path: ~/gcode_files
 
