modern config update
updated to use some of the more sane klipper features

--- a/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
+++ b/Sidewinder X1 SKR 1_3 TMC2209 Matrix BETA 3950 BLTouch.cfg
@@ -17,10 +17,10 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1768_0620011428142AAE8906DE52801E00F5-i
 #    100,100,20  # an example
 
 [input_shaper]
-shaper_type_x: 2hump_ei
-shaper_freq_x: 72.8
-shaper_type_y: ei
-shaper_freq_y: 43.0
+#shaper_type_x: 2hump_ei
+#shaper_freq_x: 72.8
+#shaper_type_y: ei
+#shaper_freq_y: 43.0
 
 [stepper_x]
 step_pin: P2.2
@@ -74,22 +74,16 @@ rotation_distance: 9.429
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
-sensor_type: NTC 100K beta 3950
+sensor_type: Generic 3950
 sensor_pin: P0.23
 control = pid
-pid_kp = 14.313
-pid_ki = 0.463
-pid_kd = 110.566
+pid_kp = 17.909
+pid_ki = 0.600
+pid_kd = 133.648
 max_extrude_only_distance: 100
-min_temp: 10
+min_temp: 0
 max_temp: 295
-#pla, set as default
-pressure_advance = 0.000
-#petg
-#pressure_advance = 0.065
-#abs/asa
-#pressure_advance = 0.0425
-
+max_extrude_cross_section: 50.0
 
 [heater_bed]
 heater_pin: P2.5
@@ -115,7 +109,7 @@ fan_speed: 1.0
 [printer]
 kinematics: cartesian
 max_velocity: 250
-max_accel: 3400
+max_accel: 2800
 max_z_velocity: 20
 max_z_accel: 100
 square_corner_velocity: 5 
@@ -125,13 +119,11 @@ sensor_pin: ^P1.25   # Pull-up (^ symbol) needed in open drain mode
 control_pin: P2.0
 x_offset: 0
 y_offset: 28
-#z_offset: 3.061
-#z_offset: 3.000
-z_offset: 2.973
+z_offset = 3.258
 samples: 2
 samples_result: average
 samples_tolerance_retries: 1
-#probe_with_touch_mode: true
+probe_with_touch_mode: true
 stow_on_each_sample: false
 
 [safe_z_home]
@@ -141,7 +133,8 @@ z_hop: 10  # Move up 10mm
 z_hop_speed: 5
 
 [bed_mesh]
-speed: 400
+speed: 200
+#horizontal_move_z: 10
 mesh_min: 30,30
 mesh_max: 270,270
 probe_count: 5,5
@@ -149,11 +142,11 @@ mesh_pps: 2,2
 algorithm: bicubic
 bicubic_tension: 0.2
 #move_check_distance: 3.0
-move_check_distance: 5.0
-#split_delta_z: .010
-split_delta_z: .025
+move_check_distance: 3.0
+split_delta_z: .010
+#split_delta_z: .025
 fade_start: 1.0 
-fade_end: 10.0
+fade_end: 5.0
 
 [bed_screws]
 screw1: 55,55
@@ -184,36 +177,36 @@ screw_thread: CW-M5
 [tmc2209 stepper_x]
 uart_pin: P1.17
 interpolate: True
-run_current: 0.850
-hold_current: 0.600
+run_current: 0.800
+hold_current: 0.625
 stealthchop_threshold: 0
 
 [tmc2209 stepper_y]
 uart_pin: P1.15
 interpolate: True
-run_current: 0.880
-hold_current: 0.650
+run_current: 0.800
+hold_current: 0.625
 stealthchop_threshold: 0
 
 [tmc2209 stepper_z]
 uart_pin: P1.10
 interpolate: True
-run_current: 0.750
+run_current: 0.800
 hold_current: 0.550
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 
 [tmc2209 stepper_z1]
 uart_pin: P1.1
 interpolate: True
-run_current: 0.750
+run_current: 0.800
 hold_current: 0.550
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 
 [tmc2209 extruder]
 uart_pin: P1.8
-run_current: 0.720
-hold_current: 0.550
-stealthchop_threshold: 10
+run_current: 0.800
+hold_current: 0.600
+stealthchop_threshold: 0
 
 #everything past here is specific to my fluidd setup 
 
@@ -316,27 +309,4 @@ gcode:
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 13.906
-#*# pid_ki = 0.408
-#*# pid_kd = 118.377
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bltouch]
-#*# z_offset = 3.061
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 14.313
-#*# pid_ki = 0.463
-#*# pid_kd = 110.566
